--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,21 @@ html {
   color: #737f8a;
   overflow-x: hidden;
 }
+::-webkit-scrollbar {
+    width: 8px;
+    background-color: white;
+}
 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgba(158, 160, 163, 0.5);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #eee;
+}
 body {
   background-color: #353b43;
   font-family: "Anaheim", sans-serif;
@@ -850,12 +864,29 @@ a:focus, a:hover {
 ==================================================================*/
 .about-2 .content-block {
   padding: 40px;
+  /* height: 1100px; */
 }
 
 .about-2 .content-block .media {
   margin-top: 25px;
+  padding:20px;
+}
+@media (min-width:992px) {
+
+    .about-2 .content-block .media {
+      margin-top: 25px;
+      padding:100px;
+    }
+    .about-2 .content-block{
+        /* height: 80vh; */
+    }
 }
 
+@media (max-width:992px) and (min-width:640px) {
+    .about-2 .content-block{
+        /* height: 90vh; */
+    }
+}
 .about-2 .content-block .media .pull-left {
   padding-right: 15px;
 }
@@ -2599,5 +2630,35 @@ blockquote {
     .nav>li>a{
         padding:10px 10px;
         font-size:20px !important;
+    }
+    .trekBG{
+        background-image: url('../images/backgroundtrek/laptop.jpeg');
+        background-size: cover;
+        min-height: 100vh;
+        color:white;
+    }
+    .mainList{
+        margin:50px auto;
+        background-color: black;
+        opacity: 0.4;
+    }
+    .headList{
+        margin-top:100px;
+        margin-bottom:50px;
+        color:white;
+    }
+    .listText{
+        margin: 30px auto;
+        padding-top: 20px;
+    }
+    .list123{
+        padding:5px;
+        background: black;
+        /* opacity:.3; */
+    }
+    .list123 li{
+        margin:20px auto;
+        font-size: 25px;
+        /* background-color: black */
     }
 /*end*/
