--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,13 @@ html {
 }
 ::-webkit-scrollbar {
     width: 8px;
+    height:8px;
     background-color: white;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: rgba(158, 160, 163, 0.5);
+    background: rgba(158, 160, 163, 0.75);
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
