timer added last date of submission added sponosors, instructions added

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,34 @@ p {
 .navigation{
     background-color: #fcf8e3 !important;
 }
+
+#clockdiv{
+	font-family: sans-serif;
+	color: #fff;
+	display: inline-block;
+	font-weight: 100;
+	text-align: center;
+	font-size: 30px;
+}
+
+#clockdiv > div{
+	padding: 10px;
+	border-radius: 3px;
+	background:  #222;
+	display: inline-block;
+}
+
+#clockdiv div > span{
+	padding: 15px;
+	border-radius: 3px;
+	background: #444;
+	display: inline-block;
+}
+
+.smalltext{
+	padding-top: 5px;
+	font-size: 16px;
+}
 /*nav.collapse{
     padding-top:1% !important;
 }*/
