--- a/css/style.css
+++ b/css/style.css
@@ -844,7 +844,7 @@ a:focus, a:hover {
   width: 160px;
   height: 92.38px;
   background-color: transparent;
-  margin: 30px auto 30px;
+  margin: 15px auto;
   padding: 20px 0;
   /*border-left: 2px solid rgba(236, 239, 241, 0.07);*/
   /*border-right: 2px solid rgba(236, 239, 241, 0.07);*/
